examples/test/testpolicy16746.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16746
  namespace: namespace186
spec:
  podSelector:
    matchLabels:
      key22: value17
      key3: value48
      key48: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value37
          key2: value17
      podSelector:
        matchLabels:
          key15: value18
          key31: value2
          key3: value29
